# knowledge_graph

./: .gitignore  README.md  ke_config.toml  pyproject.toml  reinstall.bat  run_visualizer.bat  start_mcp_with_gateway.bat
design_docs/: PROJECT_STRUCTURE.md  bootstrap.md  goals.md  knowledge_graph.md  server.md  visualization.md
knowledge_engine/: __init__.py  mcp_server.py
src/knowledge_engine/: cli.py  mcp_server.py  start_server.py
src/knowledge_engine/core/: active_context.py  config.py  knowledge_graph.py  models.py  workspace.py
src/knowledge_engine/server/: mcp_server.py  server.py
src/knowledge_engine/server/static/: index.html
src/knowledge_engine/tools/: __init__.py  concepts.py  context.py  relations.py  resources.py  traverse.py
src/knowledge_engine/visualization/: __init__.py  frontend.html  serve_frontend.py  server.py
src/knowledge_engine/visualization/static/: index.html
