[project]
name = "knowledge-engine"
version = "0.1.0"
description = "Knowledge Engine for LLM-powered codebase understanding and navigation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.8.1",
    "pydantic",
    "typer",
    "rich",
    "toml",
    "fastapi",
    "uvicorn[standard]",
]

[project.scripts]
mcp-server = "knowledge_engine.mcp_server:app"
ke-cli = "knowledge_engine.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0", 
    "ruff>=0.1.0",
]
package = true

[tool.setuptools.packages.find]
where = ["src"]
