[project]
name = "knowledge-engine"
version = "0.1.0"
description = "Knowledge Engine for LLM-powered codebase understanding and navigation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.8.1",
    "pydantic",
    "typer",
    "rich",
    "toml",
    "fastapi",
    "uvicorn[standard]",
    "pyyaml",
    "GitPython",
    "aiohttp>=3.12.13",
    "python-socketio>=5.8.0",
    "psutil",
]

[project.scripts]
ke-server = "knowledge_engine.start_server:main"
ke-cli = "knowledge_engine.cli:app"
ke-visualizer = "knowledge_engine.visualization.serve_frontend:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0", 
    "ruff>=0.1.0",
]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"knowledge_engine.server" = ["static/**"]
